# gigaverb-64

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
scripts/: install-package-7-osx.sh  make-package-osx.sh
